# MMOD_7th_term_labs

./: README.md  dop_mmo.py  lr3t1Interf.py  lr3t2INTERF.py  lr4ANALYSIS.py  lr4Interf.py  main.py  mmo_items.json  pyproject.toml  resMmod3.json  resMmod4.json  temp.py
mmod/: app.py  config.py  gui.py  modeling_frame.py  task1.py  task2.py  task3.py  task4.py  task_factory.py  theor_frame.py
