[tool.poetry]
name = "mmod"
version = "0.1.0"
description = ""
authors = ["AHTOH_mac <antonlapytko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
